{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 13,
  "lineage": "ed9aed48-e86b-64ef-a015-b3f9ddef441b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumpserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089c6f2e3866f0f14",
            "arn": "arn:aws:ec2:us-east-2:529196520446:instance/i-0406a3bc4f325adb0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0406a3bc4f325adb0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-20210322010747140500000001",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-088a4f08a250e3271",
            "private_dns": "ip-172-31-44-167.us-east-2.compute.internal",
            "private_ip": "172.31.44.167",
            "public_dns": "ec2-3-142-222-27.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.222.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-002e2a520a39119cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "jump-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-44c34908",
            "tags": {
              "Description": "A jump server used to access RDS",
              "Environment": "rain",
              "Name": "uscajump01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02ab1f7726a7d48fe"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.rain-igw",
            "aws_key_pair.jump",
            "aws_security_group.jump-sg",
            "aws_vpc.rain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rain-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529196520446:internet-gateway/igw-07c623cf9b98133bf",
            "id": "igw-07c623cf9b98133bf",
            "owner_id": "529196520446",
            "tags": {
              "Description": "Rain internet gateway",
              "Environment": "rain",
              "Name": "rain-igw"
            },
            "vpc_id": "vpc-082ba149604d899ae"
          },
          "dependencies": [
            "aws_vpc.rain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rain-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02cbe49b61b992fdf",
            "owner_id": "529196520446",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c623cf9b98133bf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Rain route table",
              "Environment": "rain",
              "Name": "Rain RTB"
            },
            "vpc_id": "vpc-082ba149604d899ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.rain-igw",
            "aws_vpc.rain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jump-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529196520446:security-group/sg-02ab1f7726a7d48fe",
            "description": "allow ssh access to our jump server",
            "egress": [],
            "id": "sg-02ab1f7726a7d48fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jump-sg",
            "name_prefix": "",
            "owner_id": "529196520446",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-c1eb26aa"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rain-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529196520446:security-group/sg-02dde7dd9d8d18e5c",
            "description": "allow http access to our ALB",
            "egress": [],
            "id": "sg-02dde7dd9d8d18e5c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rain-alb-sg",
            "name_prefix": "",
            "owner_id": "529196520446",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-c1eb26aa"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rain-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529196520446:security-group/sg-02c355214f562a34b",
            "description": "allow http access from our ALB to ecs cluster",
            "egress": [],
            "id": "sg-02c355214f562a34b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8084,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8084
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8085,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8085
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8086,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8086
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8087,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8087
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              }
            ],
            "name": "rain-ecs-sg",
            "name_prefix": "",
            "owner_id": "529196520446",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-c1eb26aa"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub1-rain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529196520446:subnet/subnet-067a673c4450c9958",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.255.140.0/24",
            "id": "subnet-067a673c4450c9958",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529196520446",
            "tags": {
              "Description": "A subnet for rain environment",
              "Environment": "rain",
              "Name": "Main"
            },
            "tags_all": {
              "Description": "A subnet for rain environment",
              "Environment": "rain",
              "Name": "Main"
            },
            "vpc_id": "vpc-082ba149604d899ae"
          },
          "dependencies": [
            "aws_vpc.rain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub2-rain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529196520446:subnet/subnet-0f9f02029df19bf21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.255.141.0/24",
            "id": "subnet-0f9f02029df19bf21",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "529196520446",
            "tags": {
              "Description": "A subnet for rain environment",
              "Environment": "rain",
              "Name": "Main"
            },
            "tags_all": {
              "Description": "A subnet for rain environment",
              "Environment": "rain",
              "Name": "Main"
            },
            "vpc_id": "vpc-082ba149604d899ae"
          },
          "dependencies": [
            "aws_vpc.rain"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:529196520446:vpc/vpc-082ba149604d899ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.255.0.0/16",
            "default_network_acl_id": "acl-0bf9bc4e7ea48ca8a",
            "default_route_table_id": "rtb-07d48a2128caa70be",
            "default_security_group_id": "sg-0bfe7d262815dc6e4",
            "dhcp_options_id": "dopt-5d15b236",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-082ba149604d899ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07d48a2128caa70be",
            "owner_id": "529196520446",
            "tags": {
              "Description": "A VPC for rain environment",
              "Environment": "rain",
              "Name": "VPC rain"
            },
            "tags_all": {
              "Description": "A VPC for rain environment",
              "Environment": "rain",
              "Name": "VPC rain"
            }
          }
        }
      ]
    }
  ]
}